--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
                     <span>Contact</span>
                 </div>
             </nav>
+            <div class="banner">
+                <h1>Don't just look, see.</h1>
+            </div>
         </div>
     </div>
 
