--- a/index.html
+++ b/index.html
@@ -26,5 +26,36 @@
         </div>
     </div>
 
+    <!-- MAIN CONTENT SECTION -->
+    <div class="container">
+        <div class="top-section">
+            <div class="attribute">
+                <img src="resources/images/paper-icon.png">
+                <p>Comprehensive Exams</p>
+            </div>
+            <div class="attribute">
+                <img src="resources/images/ruler-icon.png">
+                <p>Custom Fittings</p>
+            </div>
+            <div class="attribute">
+                <img src="resources/images/truck-icon.png">
+                <p>Fast Delivery</p>
+            </div>
+        </div>
+        <div class="bottom-section">
+            <div class="info">
+                <h3>Philosophy</h3>
+                <p>Over 75% of our brains are dedicated to one sense: vision. We
+                believe everyone deserves to see the world, no matter what. That's
+                why we offer eye exams, custom fittings, and quick delivery at a
+                low cost. It's your vision that makes ours.</p>
+            </div>
+            <div class="info">
+                <h3>Appointments</h3>
+                <p>Schedule an appointment by calling us at (312) 654-0987. We're
+                open Tuesday - Saturday, 9AM - 6PM.</p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
