--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
             <nav>
                 <div class="logo-title">
                     <img src="resources/images/logo-white.png">
-                    <span>Tortoiseshell Optics</span>
+                    <span class="desktop">Tortoiseshell Optics</span>
                 </div>
                 <div class="menu">
-                    <span>Services</span>
-                    <span>Products</span>
-                    <span>Contact</span>
+                    <span class="desktop">Services</span>
+                    <span class="desktop">Products</span>
+                    <span class="desktop">Contact</span>
+                    <span class="mobile">Menu</span>
                 </div>
             </nav>
             <div class="banner">
@@ -56,6 +57,14 @@
                 open Tuesday - Saturday, 9AM - 6PM.</p>
             </div>
         </div>
+    </div>
+
+    <!-- FOOTER -->
+    <div class="container">
+        <footer>
+            <img src="resources/images/logo-black.png">
+            <span>Copyright Tortoiseshell Optics</span>
+        </footer>
     </div>
 </body>
 </html>
